# cmake-template

./: .gitmodules  CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/lib1/: CMakeLists.txt  lib1.cpp
libraries/lib1/include/project_namespace/lib1_namespace/: hello.hpp  lib1.hpp
libraries/lib2/: CMakeLists.txt
libraries/lib3/: CMakeLists.txt
programs/: CMakeLists.txt
programs/program1/: CMakeLists.txt  main.cpp
programs/program2/: CMakeLists.txt
